--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     padding: 0;
 }
+html {
+    font-family: 'Roboto', sans-serif;
+}
 .container {
     width: 1140px;
     margin: 0 auto;
@@ -36,18 +39,16 @@ h1 {
 .title {
     margin-top: 30px;
     color: #f9bf3b;
-    font-family: "Roboto - Black";
     font-size: 41px;
-    font-weight: 400;
+    font-weight: 900;
     text-align: center;
     text-transform: uppercase;
 }
 .simple .title_big {
     margin-top: 21px;
     color: #ffffff;
-    font-family: "Roboto - Black";
     font-size: 80px;
-    font-weight: 400;
+    font-weight: 900;
     text-align: center;
     text-transform: uppercase;
 }
@@ -60,20 +61,17 @@ h1 {
     font-weight: 300;
     line-height: 28px;
     text-align: center;
-    font-family: "Roboto - Light";
 }
 .promo_info span {
     color: #f9bf3b;
-    font-family: "Roboto - Bold";
     font-weight: 700;
     text-transform: uppercase;
 }
 .promo_learnmore {
-    margin-top: 65px;
+    margin-top: 55px;
     color: #ffffff;
-    font-family: "Roboto - Thin";
     font-size: 15px;
-    font-weight: 400;
+    font-weight: 100;
     line-height: 24px;
     text-align: center;
     text-transform: uppercase;
@@ -93,12 +91,11 @@ h1 {
     width: 313px;
     height: 72px;
     box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
-    border: 4px solid rgba(0, 0, 0, 0.23);
+    border: 2px solid rgba(0, 0, 0, 0.23);
     background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
     
     text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.22);
     color: #ffffff;
-    font-family: "Roboto Condensed";
     font-size: 21px;
     font-weight: 400;
     line-height: 24px;
@@ -115,13 +112,12 @@ h1 {
     background-color: #efefef;
 }
 .waiting_header {
-color: #252525;
-font-family: Roboto;
-font-size: 30px;
-font-weight: 400;
-line-height: 12px;
-text-align: center;
-text-transform: uppercase;
+    color: #252525;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 12px;
+    text-align: center;
+    text-transform: uppercase;
 }
 .waiting_yellowhr {
     display: block;
@@ -132,13 +128,12 @@ text-transform: uppercase;
     background-color: #f9bf3b;
 }
 .waiting_subheader {
-color: #4a4a4a;
-font-family: Roboto;
-font-size: 23px;
-font-weight: 400;
-line-height: 20px;
-text-align: center;
-margin-top: 17px;
+    color: #4a4a4a;
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    margin-top: 17px;
 }
 .waiting .waiting_wrapper {
     margin-top: 45px;
@@ -154,9 +149,8 @@ margin-top: 17px;
 .waiting .waiting_wrapper .waiting_item .waiting_descr {
     margin-top: 33px;
     color: #4a4a4a;
-    font-family: Roboto;
     font-size: 15px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 21px;
     text-align: center;
 }
@@ -172,9 +166,8 @@ margin-top: 17px;
 }
 .optimization .optimization_header {
     color: #299cbd;
-    font-family: "Roboto - Black";
     font-size: 30px;
-    font-weight: 400;
+    font-weight: 900;
     line-height: 12px;
     text-align: left;
     text-transform: uppercase;
@@ -182,9 +175,8 @@ margin-top: 17px;
 }
 .optimization .optimization_text {
     color: #4a4a4a;
-    font-family: Roboto;
     font-size: 17px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 27px;
     text-align: justifyLeft;
     font-family: "Roboto - Light";
@@ -193,7 +185,6 @@ margin-top: 17px;
     margin-left: 420px;
 }
 .optimization .optimization_text span {
-    font-family: "Roboto - Bold";
     font-weight: 700;
     font-style: normal;
     letter-spacing: normal;
@@ -215,7 +206,6 @@ margin-top: 17px;
 }
 .results .results_header {
     color: #efefef;
-    font-family: Roboto;
     font-size: 30px;
     font-weight: 400;
     line-height: 12px;
@@ -249,9 +239,8 @@ margin-top: 17px;
 .results .results_wrapper .results_wrapper_item .results_wrapper_item_text {
     margin-top: 25px;
     color: #efefef;
-    font-family: Roboto;
     font-size: 17px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 20px;
     text-align: center;
 }
@@ -269,7 +258,6 @@ margin-top: 17px;
 .gift .gift_text {
     margin-top: 42px;
     color: #252525;
-    font-family: Roboto;
     font-size: 30px;
     font-weight: 400;
     line-height: 43px;
@@ -292,7 +280,6 @@ margin-top: 17px;
 .time .time_header {
     margin-top: 37px;
     color: #252525;
-    font-family: Roboto;
     font-size: 30px;
     font-weight: 400;
     line-height: 12px;
@@ -302,9 +289,8 @@ margin-top: 17px;
 .time .time_subheader {
     margin-top: 30px;
     color: #299cbd;
-    font-family: "Roboto - Black";
     font-size: 36px;
-    font-weight: 400;
+    font-weight: 900;
     line-height: 12px;
     text-align: center;
     text-transform: uppercase;
@@ -312,7 +298,6 @@ margin-top: 17px;
 .time .time_text {
     margin-top: 25px;
     color: #4a4a4a;
-    font-family: Roboto;
     font-size: 23px;
     font-weight: 400;
     line-height: 20px;
@@ -333,9 +318,8 @@ footer {
 }
 .footer_link {
     color: #888888;
-    font-family: Roboto;
     font-size: 15px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 21px;
     text-align: center;
     text-decoration: underline;
@@ -347,11 +331,15 @@ footer {
     flex-direction: row;
     height: 36px;
     color: #888888;
-    font-family: Roboto;
     font-size: 15px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 21px;
     text-align: center;
+}
+.footer_item2 a {
+    margin-left: 7px;
+    text-decoration: none;
+    color: #888888;
 }
 
 
